--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -11,7 +11,8 @@
     "data_as = pd.read_csv(\"data_airspace.csv\")\n",
     "\n",
     "from cmath import nan\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import statistics"
    ]
   },
   {
@@ -109,7 +110,7 @@
     "        arctan[i]=np.arctan( slope[i] )*180/pi\n",
     "        logical_atan[i]=arctan[i]>15\n",
     "\n",
-    "    if '1' in logical_atan\n",
+    "    if '1' in logical_atan:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
@@ -143,6 +144,9 @@
    "outputs": [],
    "source": [
     "# 7_ number of A/C with 3D Euclidean distance between 0-5 nautical miles (i.e., 0-9260 meters)\n",
+    "# 8_ number of A/C with 3D Euclidean distance between 5-10 nautical (i.e., 9260-18520 meters)\n",
+    "between_zero_to_five = 0\n",
+    "between_five_to_ten = 0\n",
     "\n",
     "def distance(long1,lat1,alt1, long2,lat2,alt2):\n",
     "\n",
@@ -152,13 +156,15 @@
     "        diff_lat[i] = lat1[i]-lat2[i]\n",
     "        diff_alt[i] = alt1[i]-alt2[i]\n",
     "\n",
-    "        dist[i]=(diff_long[i]^2 + diff_lat[i]^2 + diff_alt[i]^2)^0.5\n",
-    "        logical_dist[i]=dist[i]<9260\n",
+    "        dist[i] = (diff_long[i]^2 + diff_lat[i]^2 + diff_alt[i]^2)^0.5\n",
+    "        logical_dist_5nm[i] = dist[i]<9260\n",
+    "        logical_dist_10nm[i] = dist[i]<18520\n",
     "\n",
-    "    if '1' in logical_dist:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 0\n",
+    "    if '1' in logical_dist_5nm:\n",
+    "        between_zero_to_five = 1\n",
+    "    elif '1' in logical_dist_10nm:\n",
+    "        between_five_to_ten = 1\n",
+    "    \n",
     "\n",
     "\n",
     "count_distance_5nm = distance (long_1,lat_1,alt_1, long_2,lat_2,alt_2)"
@@ -169,7 +175,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 9_ number of A/C with lateral distance between 40-70 nautical miles and vertical separation less than 2000/1000 feet above/below 29000 ft\n",
+    "\n",
+    "logical_diff_lat_1= abs(diff_lat)>40;\n",
+    "logical_diff_lat_2= abs(diff_lat)>70;\n",
+    "logical_diff_lat=logical_diff_lat_1.*logical_diff_lat_2;\n",
+    "\n",
+    "logical_diff_alt_2000=diff_alt<2000;\n",
+    "logical_diff_alt_1000=diff_alt<1000;\n",
+    "logical_alt_below_2900=alt<29000;\n",
+    "logical_alt_above_2900=alt>29000;\n",
+    "\n",
+    "Logical_diff2000_and_above=logical_diff_alt_2000.*logical_alt_above_2900;\n",
+    "Logical_diff1000_and_below=logical_diff_alt_1000.*logical_alt_below_2900;\n",
+    "\n",
+    "Logical_overall = np.multiply (logical_diff_lat , (Logical_diff2000_and_above + Logical_diff1000_and_below))\n",
+    "\n",
+    "counter=0;\n",
+    "if sum(Logica_overall)>0\n",
+    "             counter=counter+1;\n",
+    "end\n",
+    "\n",
+    "\n",
+    "logical_dist_1 = dist>9260\n",
+    "logical_dist_2 = dist<18520\n",
+    "logical_dist = np.multiply(logical_dist_1,logical_dist_2)\n",
+    "\n",
+    "if '1' in logical_dist:\n",
+    "    return 1\n",
+    "else:\n",
+    "    return 0\n",
+    "\n",
+    "counter="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ave_alt = statistics.mean(altitude)"
+   ]
   },
   {
    "cell_type": "code",
@@ -193,18 +242,40 @@
    "source": [
     "\n",
     "# 2_Total controller's workload\n",
-    "tau_b=2\n",
-    "lambda_b=0.05\n",
-    "tau_t=10\n",
-    "tau_r=3\n",
-    "tau_c=50\n",
-    "P=300\n",
-    "M_h=7\n",
-    "M_v=1.64579\n",
-    "E_v12=440*0.000277778\n",
+    "tau_b= 2\n",
+    "lambda_b= 0.05\n",
+    "tau_t= 10\n",
+    "tau_r= 3\n",
+    "tau_c= 50\n",
+    "P= 300\n",
+    "M_h= 7*1852\n",
+    "M_v= 1000*0.3048\n",
+    "E_v12= 440*0.514444\n",
     "\n",
-    "G= tau_b*lambda_b + tau_t*density*volume/ave_tt + tau_r*density*volume/P + tau_c*2*M_h*M_v*E_v12*density*(density*volume+1)\n",
+    "G = tau_b*lambda_b + tau_t*density*volume/ave_tt + tau_r*density*volume/P + tau_c*2*M_h*M_v*E_v12*density*(density*volume+1)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4, 10, 18])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[1,2,3]\n",
+    "b=[4,5,6]\n",
+    "np.multiply(a,b)"
    ]
   }
  ],
