--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -12,7 +12,11 @@
     "\n",
     "from cmath import nan\n",
     "import numpy as np\n",
-    "import statistics"
+    "import statistics\n",
+    "\n",
+    "between_zero_to_five = 0\n",
+    "between_five_to_ten = 0\n",
+    "epsilon = 100"
    ]
   },
   {
@@ -59,11 +63,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "# 1_Number of A/C\n",
-    "# we should enumerate number of columns and then divide it by 6\n",
-    "No_A/C = data_as.columns"
+    "# we should enumerate number of columns which is = (total number of columns - 3 )/6  [3 is # the columns of sector info, and 6 is 3coordinates and 3 velocities for each A/C]\n",
+    "\n",
+    "No_aircraft = (len(data_as.columns) - 3)/6"
    ]
   },
   {
@@ -72,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3_Area and volume of the sector\n",
+    "# 2_Area and volume of the sector\n",
     "#  Shoelace formula because it is faster\n",
     "def PolyArea(x,y):\n",
     "    return 0.5*np.abs(np.dot(x,np.roll(y,1))-np.dot(y,np.roll(x,1)))\n",
@@ -87,9 +90,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4_A/C density: #A/C / Area of the sector\n",
+    "# 3_A/C density: #A/C / Area of the sector\n",
     "\n",
-    "density = No_A/C/volume\n"
+    "density = No_aircraft / volume\n"
    ]
   },
   {
@@ -98,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5_ number of A/C with Heading Change greater than 15º\n",
+    "# 4_ number of A/C with Heading Change greater than 15º\n",
     "# Achtung: zero in the denominator of slope[i]\n",
     "from math import pi\n",
     "\n",
@@ -124,11 +127,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6_ number of A/C with Altitude Change greater than 750 feet (i.e., 228.6 meter)\n",
+    "# 5_ number of A/C with Altitude Change greater than 750 feet (i.e., 228.6 meter)\n",
     "\n",
     "def Altitude_Change(alt):\n",
-    "    delta_alt[i]=alt[i+1]-alt[i]\n",
-    "    logical_delta_alt[i]=delta_alt[i]>228.6\n",
+    "    delta_alt[i] = alt[i+1] - alt[i]\n",
+    "    logical_delta_alt[i] = delta_alt[i] > 228.6\n",
     "    if '1' in logical_delta_alt:\n",
     "        return 1\n",
     "    else:\n",
@@ -143,31 +146,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 6_ _ Number of intersecting flight paths i.e., number of A/C with 3D Euclidean distance lower than 'epsilon' meters\n",
     "# 7_ number of A/C with 3D Euclidean distance between 0-5 nautical miles (i.e., 0-9260 meters)\n",
     "# 8_ number of A/C with 3D Euclidean distance between 5-10 nautical (i.e., 9260-18520 meters)\n",
-    "between_zero_to_five = 0\n",
-    "between_five_to_ten = 0\n",
-    "\n",
     "def distance(long1,lat1,alt1, long2,lat2,alt2):\n",
     "\n",
-    "    for i in range(len(long)-1):\n",
-    "\n",
+    "    if len(long1)>=len(long2):\n",
+    "        for i in range(len(long1)-1):\n",
     "        diff_long[i] = long1[i]-long2[i]\n",
     "        diff_lat[i] = lat1[i]-lat2[i]\n",
     "        diff_alt[i] = alt1[i]-alt2[i]\n",
-    "\n",
     "        dist[i] = (diff_long[i]^2 + diff_lat[i]^2 + diff_alt[i]^2)^0.5\n",
+    "        logical_dist_epsilon[i] = dist[i] < epsilon\n",
     "        logical_dist_5nm[i] = dist[i]<9260\n",
     "        logical_dist_10nm[i] = dist[i]<18520\n",
+    "    else:\n",
+    "        for i in range(len(long2)-1):\n",
+    "            diff_long[i] = long1[i]-long2[i]\n",
+    "            diff_lat[i] = lat1[i]-lat2[i]\n",
+    "            diff_alt[i] = alt1[i]-alt2[i]\n",
+    "            dist[i] = (diff_long[i]^2 + diff_lat[i]^2 + diff_alt[i]^2)^0.5\n",
+    "            logical_dist_epsilon[i] = dist[i] < epsilon\n",
+    "            logical_dist_5nm[i] = dist[i]<9260\n",
+    "            logical_dist_10nm[i] = dist[i]<18520\n",
     "\n",
-    "    if '1' in logical_dist_5nm:\n",
-    "        between_zero_to_five = 1\n",
-    "    elif '1' in logical_dist_10nm:\n",
-    "        between_five_to_ten = 1\n",
-    "    \n",
+    "    return sum(logical_dist_epsilon)\n",
     "\n",
     "\n",
-    "count_distance_5nm = distance (long_1,lat_1,alt_1, long_2,lat_2,alt_2)"
+    "Number_of_intersects = distance (long_1,lat_1,alt_1, long_2,lat_2,alt_2)  \n",
+    "        \n",
+    "\n",
+    "if '1' in logical_dist_5nm:\n",
+    "    between_zero_to_five = 1\n",
+    "elif '1' in logical_dist_10nm:\n",
+    "    between_five_to_ten = 1"
    ]
   },
   {
@@ -193,7 +205,7 @@
     "Logical_overall = np.multiply (logical_diff_lat , (Logical_diff2000_and_above + Logical_diff1000_and_below))\n",
     "\n",
     "counter=0;\n",
-    "if sum(Logica_overall)>0\n",
+    "if sum(Logical_overall)>0\n",
     "             counter=counter+1;\n",
     "end\n",
     "\n",
@@ -216,8 +228,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "ave_alt = statistics.mean(altitude)"
+    "# 10_ mean of all aircrafts' altitudes in the sector\n",
+    "def ave_alt(alt1,alt2):\n",
+    "    ave1 = statistics.mean(alt1)\n",
+    "    ave2 = statistics.mean(alt2)\n",
+    "    return statistics.mean(ave1,ave2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 11_ mean of variance of all aircrafts' altitudes in the sector\n",
+    "def var_alt(alt1,alt2):\n",
+    "    var1 = statistics.variance(alt1)\n",
+    "    var2 = statistics.variance(alt2)\n",
+    "    return statistics.mean(var1,var2)"
    ]
   },
   {
@@ -240,8 +268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# 2_Total controller's workload\n",
+    "# the following parameters are borrowed from the following paper https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.207.6706&rep=rep1&type=pdf\n",
     "tau_b= 2\n",
     "lambda_b= 0.05\n",
     "tau_t= 10\n",
@@ -254,28 +282,6 @@
     "\n",
     "G = tau_b*lambda_b + tau_t*density*volume/ave_tt + tau_r*density*volume/P + tau_c*2*M_h*M_v*E_v12*density*(density*volume+1)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 4, 10, 18])"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=[1,2,3]\n",
-    "b=[4,5,6]\n",
-    "np.multiply(a,b)"
    ]
   }
  ],
