--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Reading data from data file\n",
-    "import panda as pd\n",
-    "data_as = pd.read_csv(\"data_airspace.csv\")\n",
+    "#import panda as pd\n",
+    "#data_as = pd.read_csv(\"data_airspace.csv\")\n",
     "\n",
     "from cmath import nan\n",
     "import numpy as np\n",
@@ -46,6 +46,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "long_1 = np.array([0, 6,  4,  8, 8, 10, 14, 10, 14,  4, 4, 6, 9, 15])\n",
+    "lat_1 =  np.array([4, 6, 10, 11, 7,  6, 10, 10,  6,  0, 3, 4, 3,  6 ])\n",
+    "alt_1 = np.array([5, 6,  4,  8, 8, 10, 14, 10, 14,  4, 4, 6, 9, 15] )\n",
+    "\n",
+    "long_2 = np.array([0, 9,  8,  8, 8, 10, 4, 10, 24,  7, 4, 16, 9, 5])\n",
+    "lat_2 = np.array([10, 16, 1, 6, 8,  6, 1, 4,  16,  10, 5, 4, 13,  6])\n",
+    "alt_2 = np.array([ 5, 9,  8,  8, 8, 10, 4, 10, 24,  7, 4, 16, 9, 5])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -59,19 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_sector = np.array([1, 2, 4])\n",
+    "y_sector = np.array([4, 5, 6])\n",
+    "z_sector = np.array(3000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1_Number of A/C\n",
     "# we should enumerate number of columns which is = (total number of columns - 3 )/6  [3 is # the columns of sector info, and 6 is 3coordinates and 3 velocities for each A/C]\n",
     "\n",
-    "No_aircraft = (len(data_as.columns) - 3)/6"
+    "#No_aircraft = (len(data_as.columns) - 3)/6\n",
+    "No_aircraft =2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,33 +134,31 @@
     "from math import pi\n",
     "\n",
     "def Heading_change(long,lat):\n",
-    "    for i in range(len(long)-1):\n",
-    "        delta_long[i]=long[i+1]-long[i]\n",
-    "        delta_lat[i]=lat[i+1]-lat[i]\n",
-    "        slope[i]=delta_lat[i]/delta_long[i]\n",
-    "        arctan[i]=np.arctan( slope[i] )*180/pi\n",
-    "        logical_atan[i]=arctan[i]>15\n",
     "\n",
-    "    if '1' in logical_atan:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 0\n",
+    "        delta_long= np.diff(long)+0.00001\n",
+    "        delta_lat=np.diff(lat)\n",
+    "       \n",
+    "        if sum(np.arctan( np.divide(delta_lat,delta_long) )*180/pi > 15)>0:\n",
+    "                return 1\n",
+    "        else:\n",
+    "                return 0\n",
     "\n",
-    "count_Headin_Change = Heading_change(long_1,lat_1) + Heading_change(long_2,lat_2)\n"
+    "\n",
+    "count_Heading_Change = Heading_change(long_1 , lat_1) + Heading_change(long_2 , lat_2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 5_ number of A/C with Altitude Change greater than 750 feet (i.e., 228.6 meter)\n",
     "\n",
     "def Altitude_Change(alt):\n",
-    "    delta_alt[i] = alt[i+1] - alt[i]\n",
-    "    logical_delta_alt[i] = delta_alt[i] > 228.6\n",
-    "    if '1' in logical_delta_alt:\n",
+    "    delta_alt = np.diff(alt)\n",
+    "   \n",
+    "    if sum(delta_alt > 228.6)>0:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
@@ -142,51 +168,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= True\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_5nm=1\n"
+     ]
+    }
+   ],
    "source": [
     "# 6_ _ Number of intersecting flight paths i.e., number of A/C with 3D Euclidean distance lower than 'epsilon' meters\n",
     "# 7_ number of A/C with 3D Euclidean distance between 0-5 nautical miles (i.e., 0-9260 meters)\n",
     "# 8_ number of A/C with 3D Euclidean distance between 5-10 nautical (i.e., 9260-18520 meters)\n",
+    "diff_long=[]\n",
+    "diff_lat=[]\n",
+    "diff_alt=[]\n",
+    "dist=[]\n",
+    "logical_dist_epsilon=[]\n",
+    "logical_dist_5nm = []\n",
+    "logical_dist_10nm=[]\n",
+    "count_sum_logical_dist_epsilon = 0\n",
     "def distance(long1,lat1,alt1, long2,lat2,alt2):\n",
     "\n",
-    "    if len(long1)>=len(long2):\n",
-    "        for i in range(len(long1)-1):\n",
-    "        diff_long[i] = long1[i]-long2[i]\n",
-    "        diff_lat[i] = lat1[i]-lat2[i]\n",
-    "        diff_alt[i] = alt1[i]-alt2[i]\n",
-    "        dist[i] = (diff_long[i]^2 + diff_lat[i]^2 + diff_alt[i]^2)^0.5\n",
-    "        logical_dist_epsilon[i] = dist[i] < epsilon\n",
-    "        logical_dist_5nm[i] = dist[i]<9260\n",
-    "        logical_dist_10nm[i] = dist[i]<18520\n",
-    "    else:\n",
-    "        for i in range(len(long2)-1):\n",
-    "            diff_long[i] = long1[i]-long2[i]\n",
-    "            diff_lat[i] = lat1[i]-lat2[i]\n",
-    "            diff_alt[i] = alt1[i]-alt2[i]\n",
-    "            dist[i] = (diff_long[i]^2 + diff_lat[i]^2 + diff_alt[i]^2)^0.5\n",
-    "            logical_dist_epsilon[i] = dist[i] < epsilon\n",
-    "            logical_dist_5nm[i] = dist[i]<9260\n",
-    "            logical_dist_10nm[i] = dist[i]<18520\n",
+    "        if len(long1)>=len(long2):\n",
+    "            for i in range(len(long1)):\n",
+    "                diff_long = long1[i]-long2[i]\n",
+    "                diff_lat = lat1[i]-lat2[i]\n",
+    "                diff_alt = alt1[i]-alt2[i]\n",
+    "                dist = ((diff_long)**2 + (diff_lat)**2 + (diff_alt)**2)**0.5\n",
+    "                logical_dist_epsilon = dist < epsilon\n",
+    "                print ('logical_dist_epsilon=',logical_dist_epsilon)\n",
+    "                if (dist<9260):\n",
+    "                    print ('logical_dist_5nm=1')\n",
+    "                elif (dist<18520):\n",
+    "                    print ('logical_dist_10nm = 1')\n",
     "\n",
-    "    return sum(logical_dist_epsilon)\n",
+    "            \n",
+    "        else:\n",
+    "            for i in range(len(long2)):\n",
+    "                diff_long = long1[i]-long2[i]\n",
+    "                diff_lat = lat1[i]-lat2[i]\n",
+    "                diff_alt = alt1[i]-alt2[i]\n",
+    "                dist = ((diff_long)**2 + (diff_lat)**2 + (diff_alt)**2)**0.5\n",
+    "                logical_dist_epsilon = dist < epsilon\n",
+    "                print ('logical_dist_epsilon=',logical_dist_epsilon)\n",
+    "                if (dist<9260):\n",
+    "                    print ('logical_dist_5nm=1')\n",
+    "                elif (dist<18520):\n",
+    "                    print ('logical_dist_10nm = 1')\n",
+    "        \n",
+    "           \n",
+    "distance(long_1,lat_1,alt_1, long_2,lat_2,alt_2)\n",
     "\n",
-    "\n",
-    "Number_of_intersects = distance (long_1,lat_1,alt_1, long_2,lat_2,alt_2)  \n",
     "        \n",
     "\n",
-    "if '1' in logical_dist_5nm:\n",
-    "    between_zero_to_five = 1\n",
-    "elif '1' in logical_dist_10nm:\n",
-    "    between_five_to_ten = 1"
+    "#if sum(dist<9260)>0:\n",
+    " #   between_zero_to_five = 1\n",
+    "#elif sum(logical_dist_10nm)>0:\n",
+    " #   between_five_to_ten = 1"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 9_ number of A/C with lateral distance between 40-70 nautical miles and vertical separation less than 2000/1000 feet above/below 29000 ft\n",
     "\n",
@@ -217,56 +291,102 @@
     "if '1' in logical_dist:\n",
     "    return 1\n",
     "else:\n",
-    "    return 0\n",
-    "\n",
-    "counter="
+    "    return 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.5"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 10_ mean of all aircrafts' altitudes in the sector\n",
     "def ave_alt(alt1,alt2):\n",
     "    ave1 = statistics.mean(alt1)\n",
     "    ave2 = statistics.mean(alt2)\n",
-    "    return statistics.mean(ave1,ave2)"
+    "    return (ave1 + ave2)/2\n",
+    "\n",
+    "ave_alt(alt_1,alt_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.0"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 11_ mean of variance of all aircrafts' altitudes in the sector\n",
     "def var_alt(alt1,alt2):\n",
     "    var1 = statistics.variance(alt1)\n",
     "    var2 = statistics.variance(alt2)\n",
-    "    return statistics.mean(var1,var2)"
+    "    return (var1 + var2)/2\n",
+    "\n",
+    "var_alt(alt_1,alt_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.0"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Task load number 1: average_transit_time\n",
     "\n",
-    "def ave_tt(long):\n",
-    "    ave_transit_time=len(long)\n",
+    "def ave_tt(long1,long2):\n",
+    "    ave_transit_time1=len(long1)\n",
+    "    ave_transit_time2=len(long2)\n",
+    "    ave_transit_time = (ave_transit_time1 + ave_transit_time2)/2\n",
     "    return ave_transit_time\n",
-    "\n"
+    "\n",
+    "ave_tt(long_1,long_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "357770692.0964882\n"
+     ]
+    }
+   ],
    "source": [
     "# 2_Total controller's workload\n",
     "# the following parameters are borrowed from the following paper https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.207.6706&rep=rep1&type=pdf\n",
@@ -280,8 +400,9 @@
     "M_v= 1000*0.3048\n",
     "E_v12= 440*0.514444\n",
     "\n",
-    "G = tau_b*lambda_b + tau_t*density*volume/ave_tt + tau_r*density*volume/P + tau_c*2*M_h*M_v*E_v12*density*(density*volume+1)\n",
-    "\n"
+    "G = tau_b*lambda_b + tau_t*density*volume/ave_tt(long_1,long_2) + tau_r*density*volume/P + tau_c*2*M_h*M_v*E_v12*density*(density*volume+1)\n",
+    "\n",
+    "print (G)"
    ]
   }
  ],
