--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,10 +20,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Extracting trajectory data from columns of the data file to corresponding variables\n",
     "\n",
@@ -46,25 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_1 = np.array([0, 6,  4,  8, 8, 10, 14, 10, 14,  4, 4, 6, 9, 15])\n",
-    "lat_1 =  np.array([4, 6, 10, 11, 7,  6, 10, 10,  6,  0, 3, 4, 3,  6 ])\n",
-    "alt_1 = np.array([5, 6,  4,  8, 8, 10, 14, 10, 14,  4, 4, 6, 9, 15] )\n",
+    "long_1 = np.array([0, 6,  4,  8, 8, 10, 14, 10, 14,  4, 4, 6, 9, 15])*10**3\n",
+    "lat_1 =  np.array([4, 6, 10, 11, 7,  6, 10, 10,  6,  0, 3, 4, 3,  6 ])*10**3\n",
+    "alt_1 = np.array([5, 6,  4,  8, 8, 10, 14, 10, 14,  4, 4, 6, 9, 15] )*10**3\n",
     "\n",
-    "long_2 = np.array([0, 9,  8,  8, 8, 10, 4, 10, 24,  7, 4, 16, 9, 5])\n",
-    "lat_2 = np.array([10, 16, 1, 6, 8,  6, 1, 4,  16,  10, 5, 4, 13,  6])\n",
-    "alt_2 = np.array([ 5, 9,  8,  8, 8, 10, 4, 10, 24,  7, 4, 16, 9, 5])\n",
+    "long_2 = np.array([0, 9,  8,  8, 8, 10, 4, 10, 24,  7, 4, 16, 9, 5])*10**3\n",
+    "lat_2 = np.array([10, 16, 1, 6, 8,  6, 1, 4,  16,  10, 5, 4, 13,  6])*10**3\n",
+    "alt_2 = np.array([ 5, 9,  8,  8, 8, 10, 4, 10, 24,  7, 4, 16, 9, 5])*10**3\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Extracting sector data from columns of the data file to corresponding variables\n",
     "\n",
@@ -75,18 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_sector = np.array([1, 2, 4])\n",
-    "y_sector = np.array([4, 5, 6])\n",
-    "z_sector = np.array(3000)\n"
+    "x_sector = np.array([1, 2, 4])*10*10\n",
+    "y_sector = np.array([4, 5, 6])*10**10\n",
+    "z_sector = np.array(3048)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -178,9 +174,9 @@
       "logical_dist_epsilon= False\n",
       "logical_dist_5nm=1\n",
       "logical_dist_epsilon= False\n",
-      "logical_dist_5nm=1\n",
+      "logical_dist_10nm = 1\n",
       "logical_dist_epsilon= False\n",
-      "logical_dist_5nm=1\n",
+      "logical_dist_10nm = 1\n",
       "logical_dist_epsilon= False\n",
       "logical_dist_5nm=1\n",
       "logical_dist_epsilon= False\n",
@@ -188,21 +184,21 @@
       "logical_dist_epsilon= True\n",
       "logical_dist_5nm=1\n",
       "logical_dist_epsilon= False\n",
-      "logical_dist_5nm=1\n",
+      "logical_dist_10nm = 1\n",
       "logical_dist_epsilon= False\n",
       "logical_dist_5nm=1\n",
       "logical_dist_epsilon= False\n",
-      "logical_dist_5nm=1\n",
+      "logical_dist_10nm = 1\n",
+      "logical_dist_epsilon= False\n",
+      "logical_dist_10nm = 1\n",
       "logical_dist_epsilon= False\n",
       "logical_dist_5nm=1\n",
       "logical_dist_epsilon= False\n",
-      "logical_dist_5nm=1\n",
+      "logical_dist_10nm = 1\n",
       "logical_dist_epsilon= False\n",
-      "logical_dist_5nm=1\n",
+      "logical_dist_10nm = 1\n",
       "logical_dist_epsilon= False\n",
-      "logical_dist_5nm=1\n",
-      "logical_dist_epsilon= False\n",
-      "logical_dist_5nm=1\n"
+      "logical_dist_10nm = 1\n"
      ]
     }
    ],
@@ -296,16 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.5"
+       "8714.0"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,21 +317,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 182,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21.0"
-      ]
-     },
-     "execution_count": 182,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 11_ mean of variance of all aircrafts' altitudes in the sector\n",
     "def var_alt(alt1,alt2):\n",
@@ -348,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +340,7 @@
        "14.0"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "357770692.0964882\n"
+      "1.5489235650778734\n"
      ]
     }
    ],
@@ -403,6 +386,26 @@
     "G = tau_b*lambda_b + tau_t*density*volume/ave_tt(long_1,long_2) + tau_r*density*volume/P + tau_c*2*M_h*M_v*E_v12*density*(density*volume+1)\n",
     "\n",
     "print (G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "239268.0"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volume*1.57*(10**(-10))"
    ]
   }
  ],
