--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extracting trajectory data from columns of the data file to corresponding variables\n",
+    "Extracting trajectory data from columns of the data file to corresponding variables\n",
     "\n",
     "long_1 = data_as.loc[:,\"longitude_1\"]\n",
     "lat_1 = data_as.loc[:,\"latitude_1\"]\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extracting sector data from columns of the data file to corresponding variables\n",
+    "Extracting sector data from columns of the data file to corresponding variables\n",
     "\n",
     "x_sector = data_as.loc[:,\"coordinates_x\"]\n",
     "y_sector = data_as.loc[:,\"coordinates_y\"]\n",
@@ -71,18 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_sector = np.array([1, 2, 4])*10*10\n",
-    "y_sector = np.array([4, 5, 6])*10**10\n",
-    "z_sector = np.array(3048)\n"
+    "x=2.1*10**5\n",
+    "y=2.1*10**5\n",
+    "x_sector = np.array([0, x, 0])\n",
+    "y_sector = np.array([0, 0, y])\n",
+    "z_sector = 3048\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,27 +92,27 @@
     "# we should enumerate number of columns which is = (total number of columns - 3 )/6  [3 is # the columns of sector info, and 6 is 3coordinates and 3 velocities for each A/C]\n",
     "\n",
     "#No_aircraft = (len(data_as.columns) - 3)/6\n",
-    "No_aircraft =2"
+    "No_aircraft = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2_Area and volume of the sector\n",
     "#  Shoelace formula because it is faster\n",
-    "def PolyArea(x,y):\n",
-    "    return 0.5*np.abs(np.dot(x,np.roll(y,1))-np.dot(y,np.roll(x,1)))\n",
-    "\n",
-    "area = PolyArea(x_sector,y_sector)\n",
+    "#def PolyArea(x,y):\n",
+    " #   return 0.5*np.abs(np.dot(x,np.roll(y,1))-np.dot(y,np.roll(x,1)))\n",
+    "#area = PolyArea(x_sector,y_sector)\n",
+    "area = x*y/2\n",
     "volume = area * z_sector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9_ number of A/C with lateral distance between 40-70 nautical miles and vertical separation less than 2000/1000 feet above/below 29000 ft\n",
+    "9_ number of A/C with lateral distance between 40-70 nautical miles and vertical separation less than 2000/1000 feet above/below 29000 ft\n",
     "\n",
     "logical_diff_lat_1= abs(diff_lat)>40;\n",
     "logical_diff_lat_2= abs(diff_lat)>70;\n",
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +303,7 @@
        "8714.0"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 11_ mean of variance of all aircrafts' altitudes in the sector\n",
+    "11_ mean of variance of all aircrafts' altitudes in the sector\n",
     "def var_alt(alt1,alt2):\n",
     "    var1 = statistics.variance(alt1)\n",
     "    var2 = statistics.variance(alt2)\n",
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +342,7 @@
        "14.0"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,14 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5489235650778734\n"
+      "1.5565563833660954\n"
      ]
     }
    ],
@@ -390,22 +392,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "239268.0"
+       "10551.7188"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "volume*1.57*(10**(-10))"
+    "volume*1.57*(10**-10)"
    ]
   }
  ],
