--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "8714.0"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "14.0"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,14 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5565563833660954\n"
+      "G =  1.5565563833660954\n"
      ]
     }
    ],
@@ -387,27 +387,24 @@
     "\n",
     "G = tau_b*lambda_b + tau_t*density*volume/ave_tt(long_1,long_2) + tau_r*density*volume/P + tau_c*2*M_h*M_v*E_v12*density*(density*volume+1)\n",
     "\n",
-    "print (G)"
+    "print ('G = ', G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10551.7188"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "volume =  10551.7188 nm\n"
+     ]
     }
    ],
    "source": [
-    "volume*1.57*(10**-10)"
+    "print ('volume = ',volume*1.57*(10**-10), 'nm')"
    ]
   }
  ],
