--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "8714.0"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "14.0"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,14 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G =  1.5565563833660954\n"
+      "Workload =  1.5565563833660954\n"
      ]
     }
    ],
@@ -387,12 +387,12 @@
     "\n",
     "G = tau_b*lambda_b + tau_t*density*volume/ave_tt(long_1,long_2) + tau_r*density*volume/P + tau_c*2*M_h*M_v*E_v12*density*(density*volume+1)\n",
     "\n",
-    "print ('G = ', G)"
+    "print ('Workload = ', G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
