--- a/msdata/prepareFIR.ipynb
+++ b/msdata/prepareFIR.ipynb
@@ -1855,213 +1855,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>time</th>\n",
-       "      <th>altitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>dist</th>\n",
-       "      <th>dir</th>\n",
-       "      <th>speed</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1977-11-10 08:08:39+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>-57081.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-118.407780</td>\n",
-       "      <td>33.942500</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>299.619187</td>\n",
-       "      <td>152.683148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977-11-10 08:10:00+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>-56958.0</td>\n",
-       "      <td>4350.25</td>\n",
-       "      <td>-118.585458</td>\n",
-       "      <td>34.025462</td>\n",
-       "      <td>18.780027</td>\n",
-       "      <td>299.619187</td>\n",
-       "      <td>152.683148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977-11-10 08:12:00+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>-56835.0</td>\n",
-       "      <td>8700.50</td>\n",
-       "      <td>-118.763135</td>\n",
-       "      <td>34.108425</td>\n",
-       "      <td>37.560054</td>\n",
-       "      <td>299.619187</td>\n",
-       "      <td>152.683148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977-11-10 08:14:00+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>-56712.0</td>\n",
-       "      <td>13050.75</td>\n",
-       "      <td>-118.940812</td>\n",
-       "      <td>34.191387</td>\n",
-       "      <td>56.340082</td>\n",
-       "      <td>299.619187</td>\n",
-       "      <td>152.683148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977-11-10 08:16:00+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>-56589.0</td>\n",
-       "      <td>17401.00</td>\n",
-       "      <td>-119.118490</td>\n",
-       "      <td>34.274350</td>\n",
-       "      <td>75.120109</td>\n",
-       "      <td>299.619187</td>\n",
-       "      <td>152.683148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977-11-11 00:10:43+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>643.0</td>\n",
-       "      <td>3280.00</td>\n",
-       "      <td>103.991350</td>\n",
-       "      <td>1.150270</td>\n",
-       "      <td>1.852268</td>\n",
-       "      <td>359.378856</td>\n",
-       "      <td>112.313476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977-11-11 00:12:00+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>727.0</td>\n",
-       "      <td>1920.00</td>\n",
-       "      <td>103.990430</td>\n",
-       "      <td>1.235110</td>\n",
-       "      <td>9.434332</td>\n",
-       "      <td>359.378856</td>\n",
-       "      <td>112.313476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977-11-11 00:12:07+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>727.0</td>\n",
-       "      <td>1920.00</td>\n",
-       "      <td>103.990430</td>\n",
-       "      <td>1.235110</td>\n",
-       "      <td>9.434332</td>\n",
-       "      <td>359.416431</td>\n",
-       "      <td>83.346606</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977-11-11 00:14:00+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>892.0</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>103.989170</td>\n",
-       "      <td>1.358780</td>\n",
-       "      <td>13.752190</td>\n",
-       "      <td>359.416431</td>\n",
-       "      <td>83.346606</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977-11-11 00:14:52+00:00</th>\n",
-       "      <td>SIA37A</td>\n",
-       "      <td>892.0</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>103.989170</td>\n",
-       "      <td>1.358780</td>\n",
-       "      <td>13.752190</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>505 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               id     time  altitude   longitude   latitude  \\\n",
-       "date                                                                          \n",
-       "1977-11-10 08:08:39+00:00  SIA37A -57081.0      0.00 -118.407780  33.942500   \n",
-       "1977-11-10 08:10:00+00:00  SIA37A -56958.0   4350.25 -118.585458  34.025462   \n",
-       "1977-11-10 08:12:00+00:00  SIA37A -56835.0   8700.50 -118.763135  34.108425   \n",
-       "1977-11-10 08:14:00+00:00  SIA37A -56712.0  13050.75 -118.940812  34.191387   \n",
-       "1977-11-10 08:16:00+00:00  SIA37A -56589.0  17401.00 -119.118490  34.274350   \n",
-       "...                           ...      ...       ...         ...        ...   \n",
-       "1977-11-11 00:10:43+00:00  SIA37A    643.0   3280.00  103.991350   1.150270   \n",
-       "1977-11-11 00:12:00+00:00  SIA37A    727.0   1920.00  103.990430   1.235110   \n",
-       "1977-11-11 00:12:07+00:00  SIA37A    727.0   1920.00  103.990430   1.235110   \n",
-       "1977-11-11 00:14:00+00:00  SIA37A    892.0      4.00  103.989170   1.358780   \n",
-       "1977-11-11 00:14:52+00:00  SIA37A    892.0      4.00  103.989170   1.358780   \n",
-       "\n",
-       "                                dist         dir       speed  \n",
-       "date                                                          \n",
-       "1977-11-10 08:08:39+00:00   0.000000  299.619187  152.683148  \n",
-       "1977-11-10 08:10:00+00:00  18.780027  299.619187  152.683148  \n",
-       "1977-11-10 08:12:00+00:00  37.560054  299.619187  152.683148  \n",
-       "1977-11-10 08:14:00+00:00  56.340082  299.619187  152.683148  \n",
-       "1977-11-10 08:16:00+00:00  75.120109  299.619187  152.683148  \n",
-       "...                              ...         ...         ...  \n",
-       "1977-11-11 00:10:43+00:00   1.852268  359.378856  112.313476  \n",
-       "1977-11-11 00:12:00+00:00   9.434332  359.378856  112.313476  \n",
-       "1977-11-11 00:12:07+00:00   9.434332  359.416431   83.346606  \n",
-       "1977-11-11 00:14:00+00:00  13.752190  359.416431   83.346606  \n",
-       "1977-11-11 00:14:52+00:00  13.752190    0.000000    0.000000  \n",
-       "\n",
-       "[505 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dfs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Projekte\\GitHub\\bluesky\\plugins\\msdata\\prepareFIR.ipynb Zelle 18\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projekte/GitHub/bluesky/plugins/msdata/prepareFIR.ipynb#X23sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m sampleTime \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m120s\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projekte/GitHub/bluesky/plugins/msdata/prepareFIR.ipynb#X23sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# get a copy of simplified dataframe\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Projekte/GitHub/bluesky/plugins/msdata/prepareFIR.ipynb#X23sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m dr \u001b[39m=\u001b[39m dfs\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projekte/GitHub/bluesky/plugins/msdata/prepareFIR.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# set a give date to transform seconds to timestamp\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projekte/GitHub/bluesky/plugins/msdata/prepareFIR.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m ddt \u001b[39m=\u001b[39m \u001b[39m248054400\u001b[39m   \u001b[39m# 11.11.77 just for fun\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dfs' is not defined"
+     ]
     }
    ],
    "source": [
